--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
   "scripts": {
     "test_client": "tape test/client | tap-spec",
     "test_server": "tape test/server | tap-spec"
-
   },
   "repository": {
     "type": "git",
@@ -24,5 +23,8 @@
   "devDependencies": {
     "tap-spec": "^4.1.1",
     "tape": "^4.9.0"
+  },
+  "dependencies": {
+    "request": "^2.85.0"
   }
 }
