--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "test": "test"
   },
   "scripts": {
-    "test": "node test/server.js | tap-spec",
-    "start": "node src/server.js"
+    "test": "node ./test/server.js | tap-spec",
+    "start": "node ./src/server.js"
   },
   "repository": {
     "type": "git",
