--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test_client": "tape test/client | tap-spec",
-    "test_server": "tape test/server | tap-spec"
+    "test_server": "tape src/server | tap-spec"
   },
   "repository": {
     "type": "git",
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/FACG4/weatherMap#readme",
   "devDependencies": {
+    "nodemon": "^1.17.3",
     "tap-spec": "^4.1.1",
     "tape": "^4.9.0"
   },
